# deepseek-desktop

./: .gitignore  .sourcery.yaml  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_research.sql
src-tauri/src/: commands.rs  db.rs  deepseek.rs  lib.rs  main.rs  models.rs  research.rs  search.rs  secrets.rs  security.rs  tools.rs
src/components/chat/: ChatInput.tsx  ChatView.tsx  CodeBlock.tsx  MessageBubble.tsx  MessageList.tsx  ReasoningBlock.tsx  ResearchPanel.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/settings/: SettingsDialog.tsx
src/lib/: tauri.ts  types.ts
src/stores/: chatStore.ts  settingsStore.ts
